--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@sap/ux-ui5-tooling": "1"
   },
   "scripts": {
+    "config": "node scripts/build-config.js",
+    "prestart": "npm run config",
     "start": "fiori run --open \"test/flp.html#app-preview\"",
+    "prestart-local": "npm run config",
     "start-local": "fiori run --config ./ui5-local.yaml --open \"test/flp.html#app-preview\"",
+    "prebuild": "npm run config",
     "build": "ui5 build --config=ui5.yaml --clean-dest --dest dist",
     "deploy": "fiori verify",
     "deploy-config": "fiori add deploy-config",
+    "prestart-noflp": "npm run config",
     "start-noflp": "fiori run --open \"/index.html?sap-ui-xx-viewCache=false\"",
     "int-test": "fiori run --open \"test/integration/opaTests.qunit.html\"",
     "start-variants-management": "fiori run --open \"/preview.html#app-preview\"",
